# zc702_firmware

./: .gitignore  CMakeLists.txt  README.md  maxi.cpp  maxi_new.cpp  pca_coeff.xml
detection/: BGSDetector.cpp  BGSDetector.h  ClientUDP.cpp  Detector.cpp  Detector.h  Frame.h  MyTypes.h  main.cpp
drivers/: xbacksub_linux.c  xfeature.c  xfeature.h  xfeature_hw.h
include/: xparameters.h
